Adjustments to imgs to prevent overflow of parent container grid element

--- a/client/style.css
+++ b/client/style.css
@@ -15,6 +15,11 @@ body {
     background-color: #fefefe;
 }
 
+img {
+    display: block;
+    max-width: 100%;
+}
+
 .title {
     margin: 2rem;
     text-align: center;
@@ -77,12 +82,11 @@ body {
     margin: 0 auto 4rem auto;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
-    grid-gap: 1.5rem;
-    grid-auto-flow: dense;
+    gap: 1.5rem;
 }
 
 .results-gif {
-    width: 100%;
+    width: auto;
     border-radius: 4px;
     box-shadow: 0 5px 13px rgba(0, 0, 0, 0.25);
 }
